--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,9 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+    <script src="lib/firebase/firebase.js"></script>
+    <script src="lib/angularfire/angularfire.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
@@ -23,7 +26,7 @@
     <script src="js/controllers.js"></script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="synctrip">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
