--- a/www/index.html
+++ b/www/index.html
@@ -26,14 +26,17 @@
     <!-- your app's js -->
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
+  <script src="js/services.js"></script>
+  <script src="js/service.login.js"></script>
+  <script src="js/service.firebase.js"></script>
+  <script src="js/service.trips.js"></script>
+  <script src="js/module.simpleLoginTools.js"></script>
+  <script src="js/controller.trips.js"></script>
+  <script src="js/controller.account.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/directives.js"></script>
   <script src="js/filters.js"></script>
   <!-- <script src="js/routes.js"></script> -->
-  <script src="js/services.js"></script>
-  <script src="js/service.login.js"></script>
-  <script src="js/service.firebase.js"></script>
-  <script src="js/module.simpleLoginTools.js"></script>
   <script src="js/module.routeSecurity.js"></script>
   </head>
 
