login/out working

--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
 
     <script src="lib/firebase/firebase.js"></script>
     <script src="lib/firebase-simple-login/firebase-simple-login.js"></script>
-    <script src="lib/angularfire/angularfire.js"></script>
+    <script src="lib/angularfire/dist/angularfire.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -26,11 +26,11 @@
     <!-- your app's js -->
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
+  <script src="js/firebase.utils.js"></script>
   <script src="js/services.js"></script>
   <script src="js/service.login.js"></script>
-  <script src="js/service.firebase.js"></script>
   <script src="js/service.trips.js"></script>
-  <script src="js/module.simpleLoginTools.js"></script>
+  <script src="js/module.simpleLogin.js"></script>
   <script src="js/controller.trips.js"></script>
   <script src="js/controller.account.js"></script>
   <script src="js/controllers.js"></script>
