--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
     <script src="lib/firebase/firebase.js"></script>
     <script src="lib/firebase-simple-login/firebase-simple-login.js"></script>
     <script src="lib/angularfire/dist/angularfire.js"></script>
+    <script src="lib/firebase-util/firebase-util.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
