working on Trip details page

--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
   <script src="js/service.trips.js"></script>
   <script src="js/module.simpleLogin.js"></script>
   <script src="js/controller.trips.js"></script>
+  <script src="js/controller.trip.js"></script>
   <script src="js/controller.account.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/directives.js"></script>
