working on pulling in Google Maps directive

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
+
     <link href="lib/ionicons/css/ionicons.css" rel="stylesheet">
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -20,9 +21,6 @@
     <script src="lib/firebase-simple-login/firebase-simple-login.js"></script>
     <script src="lib/angularfire/dist/angularfire.js"></script>
     <script src="lib/firebase-util/firebase-util.js"></script>
-    <script src="//maps.googleapis.com/maps/api/js?sensor=false"></script>
-    <script src="lib/lodash/dist/lodash.min.js"></script>
-    <script src="lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -34,6 +32,11 @@
     <script src="js/services.js"></script>
     <script src="js/service.login.js"></script>
     <script src="js/service.trips.js"></script>
+
+    <script src="//maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script src="lib/lodash/dist/lodash.underscore.min.js"></script>
+    <script src="lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
+
     <script src="js/module.simpleLogin.js"></script>
     <script src="js/controller.trips.js"></script>
     <script src="js/controller.trip.js"></script>
