working on adding geoautocomplete

--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,8 @@
     <script src="js/service.login.js"></script>
     <script src="js/service.trips.js"></script>
 
-    <script src="//maps.googleapis.com/maps/api/js?sensor=false"></script>
+
+    <script src="//maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
     <script src="lib/lodash/dist/lodash.underscore.min.js"></script>
     <script src="lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
 
@@ -43,6 +44,7 @@
     <script src="js/controller.account.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
+    <script src="js/directive.geoautocomplete.js"></script>
     <script src="js/filters.js"></script>
     <!-- <script src="js/routes.js"></script> -->
     <script src="js/module.routeSecurity.js"></script>
