--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,7 @@
     <script src="//maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
     <script src="lib/lodash/dist/lodash.underscore.min.js"></script>
     <script src="lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
+    <script src="lib/ngAutocomplete/src/ngAutocomplete.js"></script>
 
     <script src="js/module.simpleLogin.js"></script>
     <script src="js/controller.trips.js"></script>
@@ -44,7 +45,6 @@
     <script src="js/controller.account.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
-    <script src="js/directive.geoautocomplete.js"></script>
     <script src="js/filters.js"></script>
     <!-- <script src="js/routes.js"></script> -->
     <script src="js/module.routeSecurity.js"></script>
