--- a/www/index.html
+++ b/www/index.html
@@ -29,10 +29,10 @@
     <script src="js/app.js"></script>
     <script src="js/config.js"></script>
     <script src="js/firebase.utils.js"></script>
-    <script src="js/services.js"></script>
     <script src="js/service.login.js"></script>
+    <script src="js/service.gmapservice.js"></script>
     <script src="js/service.trips.js"></script>
-
+    <script src="js/services.js"></script>
 
     <script src="//maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
     <script src="lib/lodash/dist/lodash.underscore.min.js"></script>
